# icfpcontest2021.github.io

./: .gitignore  LICENSE  Makefile  README.md  about.html  faq.html  feed.sh  feed.xml  index.html  index.sh  prizes.html  rules.html  scoreboard-lightning.html  scoreboard.html  specification.html  style.css  template.sh  writeups.html
.github/workflows/: main.yaml  pages.yaml  toolchain.yaml
assets/: contest-presentation.vtt
infra/: Makefile  docker-compose.yaml  images.nix
problems/00h/: 1.problem  10.problem  11.problem  12.problem  13.problem  14.problem  15.problem  16.problem  17.problem  18.problem  19.problem  2.problem  20.problem  21.problem  22.problem  23.problem  24.problem  25.problem  26.problem  27.problem  28.problem  29.problem  3.problem  30.problem  31.problem  32.problem  33.problem  34.problem  35.problem  36.problem  37.problem  38.problem  39.problem  4.problem  40.problem  41.problem  42.problem  43.problem  44.problem  45.problem  (+19 more)
problems/12h/: 60.problem  61.problem  62.problem  63.problem  64.problem  65.problem  66.problem  67.problem  68.problem  69.problem  70.problem  71.problem  72.problem  73.problem  74.problem  75.problem  76.problem  77.problem  78.problem
problems/24h/: 79.problem  80.problem  81.problem  82.problem  83.problem  84.problem  85.problem  86.problem  87.problem  88.problem
problems/36h/: 100.problem  101.problem  102.problem  103.problem  104.problem  105.problem  106.problem  89.problem  90.problem  91.problem  92.problem  93.problem  94.problem  95.problem  96.problem  97.problem  98.problem  99.problem
problems/48h/: 107.problem  108.problem  109.problem  110.problem  111.problem  112.problem  113.problem  114.problem  115.problem  116.problem  117.problem  118.problem  119.problem  120.problem  121.problem  122.problem  123.problem  124.problem  125.problem  126.problem  127.problem  128.problem  129.problem  130.problem  131.problem  132.problem
spec/: Makefile  spec.md
toolchain/: brain-wall.cabal  stack.yaml
toolchain/assets/: style.css
toolchain/db/: 0001-db-version.sql  0002-add-teams.sql  0003-team-members.sql  0004-team-api-key.sql  0005-add-problems-solutions.sql  0006-add-judgements.sql  0007-judgement-bonus.sql  0008-add-features.sql  0009-judgement-bonuses.sql  0010-latest-solutions.sql  0011-judgements-score-message.sql  0012-scoreboard.sql  0013-problems-enabled.sql  0014-features-submission-rate.sql  0015-features-contest-end.sql  0016-lightning-scoreboard.sql  0017-public-scoreboard.sql  0018-scoreboard-bigint.sql  0019-web-password.sql  0020-score-dislikes.sql  0021-granular-bonuses.sql  0022-problems-min-dislikes.sql  0023-latest-solutions-bug.sql  0024-teams-region.sql  0025-features-submission-limit-kb.sql  0026-team-source-code.sql  0027-bonus-ok-optional.sql  0028-time-indices.sql  0029-more-indices.sql  0030-features.sql  0031-contest-min-dislikes.sql
toolchain/lib/: BrainWall.hs
toolchain/lib/BrainWall/: Box.hs  Circle.hs  Database.hs  Edge.hs  Graph.hs  JasperSolver.hs  Json.hs  Planar.hs  Polygon.hs  Problem.hs  Random.hs  Svg.hs  Triangle.hs  V2.hs  Version.hs  Web.hs
toolchain/lib/BrainWall/Edge/: Slope.hs
toolchain/lib/BrainWall/Graphics/: Delaunay.hs  Projective.hs
toolchain/lib/BrainWall/JasperSolver/: HillClimb.hs  Limbs.hs  SimulatedAnnealing.hs
toolchain/lib/BrainWall/Main/: Animate.hs  DownloadSources.hs  EstimateEpsilon.hs  Gallery.hs  GenerateBonus.hs  GenerateFigure.hs  GenerateHole.hs  InsertProblems.hs  JasperGen.hs  Judge.hs  ParseSvg.hs  Prosecutor.hs  RandomMany.hs  RandomProblem.hs  RenderSvg.hs  ResetPassword.hs  Scoreboard.hs  Texture.hs
toolchain/lib/BrainWall/Polygon/: ContainsEdge.hs  ContainsPoint.hs  ConvexHull.hs  Internal.hs  Simple.hs  Triangulate.hs
toolchain/lib/BrainWall/Web/: Assets.hs
toolchain/lib/Data/: UUID.hs
toolchain/lib/Data/List/: Extended.hs
toolchain/lib/Options/Applicative/: Extended.hs
toolchain/lib/System/Random/: Extended.hs
toolchain/lib/Text/XML/Light/: Extended.hs
toolchain/src/: Animate.hs  DownloadSources.hs  EstimateEpsilon.hs  Gallery.hs  GenerateBonus.hs  GenerateFigure.hs  GenerateHole.hs  InsertProblems.hs  JasperGen.hs  JasperSolver.hs  Judge.hs  ParseSvg.hs  Prosecutor.hs  RandomMany.hs  RandomProblem.hs  RenderSvg.hs  ResetPassword.hs  Scoreboard.hs  Texture.hs  Web.hs
toolchain/tests/: Main.hs
toolchain/tests/BrainWall/Database/: Tests.hs
toolchain/tests/BrainWall/Edge/: Tests.hs
toolchain/tests/BrainWall/Edge/Slope/: Tests.hs
toolchain/tests/BrainWall/Main/Prosecutor/: Tests.hs
toolchain/tests/BrainWall/Polygon/: Tests.hs
toolchain/tests/BrainWall/Polygon/ContainsEdge/: Tests.hs
toolchain/tests/BrainWall/Polygon/ContainsPoint/: Tests.hs
toolchain/tests/BrainWall/Problem/: Tests.hs
updates/: 006-spec.html  010-spec.html  011-spec.html  012-spec.html  013-contest-end.html
website/: Makefile  index.sh  prizes.html  rules.html  scoreboard-lightning.html  scoreboard.html  style.css  template.sh  writeups.html
website/assets/: style.css
website/updates/: 001-discord-server.html  002-atom-feed.html  003-clothing.html  004-psa.html  005-psa.html  007-spec.html  008-spec.html  009-spec.html  012-spec.html  014-post-contest-update.html  015-winners-notified.html  016-code-open-sourced.html  017-final-results.html  018-contest-presentation-video.html
